--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,28 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#fff"
-    tools:context=".ExperimentalAccess"
-    android:orientation="vertical">
+    tools:context=".MainActivity">
 
-    <android.support.design.widget.TabLayout
-        android:id="@+id/tab_Frieght"
+    <GridView
+        android:id="@+id/Grid_View"
+        android:numColumns="2"
+        android:gravity="center"
+        android:columnWidth="100dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:tabMode="fixed"
-        app:tabGravity="fill"
-        app:tabIndicatorColor="#000">
-    </android.support.design.widget.TabLayout>
+        android:layout_height="match_parent"/>
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/viewPage_Freight"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-    </android.support.v4.view.ViewPager>
-
-
-</LinearLayout>
+</RelativeLayout>
